# video-inference

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml  deny.toml
.github/skills/cuda-setup/: SKILL.md
.github/skills/cuda-setup/references/: cuda-architecture.md
.github/skills/profiling-setup/: SKILL.md
.github/workflows/: pr.yml
.zed/: settings.json
examples/: allframes.rs  annotate.rs  cli.rs  decode.rs  devices.rs  ffmpeg_sidecar.rs  iterate.rs  manyfiles.rs  multithread.rs  simple.rs  simple_with_model.rs  singlethread.rs
src/: .gitignore  annotate.rs  detection.rs  error.rs  inference.rs  lib.rs  loaders.rs  main.rs  onnx.rs  parallel.rs  runtime.rs  threading.rs  video.rs  vizualize.rs
tests/: detection.rs
