[package]
name = "video-inference"
version = "0.0.6"
edition = "2024"
description = "Run ONNX object-detection models on video frames with hardware-accelerated decoding and inference"
license = "MIT"
repository = "https://github.com/simonjanssen/video-inference"
authors = ["Simon Janssen"]
keywords = ["video", "inference", "onnx", "object-detection"]
categories = ["multimedia::video"]
readme = "README.md"
rust-version = "1.85"
include = ["src/**", "Cargo.toml", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
annotate = ["ab_glyph", "image", "imageproc"]
serde = ["dep:serde"]

[dependencies]
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["tls-rustls"] }
tracing = "0.1.44"
video-rs = { version = "0.11.0", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
ab_glyph = { version = "0.2.32", optional = true }
image = { version = "0.25.10", optional = true }
imageproc = { version = "0.26.1", optional = true }
dirs = "6.0.0"
thiserror = "2.0.18"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["coreml"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["cuda"] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
ffmpeg-next = { version = "8.1.0", features = ["rpi"] }

[target.'cfg(not(all(target_os = "linux", target_arch = "aarch64")))'.dependencies]
ffmpeg-next = { version = "8.1.0" }

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15"
rayon = "1.11.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"
